# softec-26

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  API_CONTRACTS.md  ARCHITECTURE_VERIFICATION.md  FAIRGIG_VOICE_AGENT_JUDGE_BRIEF.md  PROJECT_CONTEXT.md  Problem_Statement.md  README.md  README_NEW.md  SYSTEM_ARCHITECTURE_PIPELINE.md  check_stats.ts  eslint.config.mjs  files.txt  files_utf8.txt  flow_test.sh  package.json  pnpm-lock.yaml  problem_statement.md
Scripts/: build.ps1  build.sh  run.ps1  run.sh
advisor-service/: main.py  models.py  requirements.txt  shared_env.py
advisor-service/context/: __init__.py  builder.py  fetcher.py
advisor-service/rag/: __init__.py  chain.py  prompt.py  retriever.py
advisor-service/vector_store/: store.py  (+2 more)
anomaly-service/: README.md  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  test_payload.json
anomaly-service/detection/: explainer.py  rules.py
anomaly-service/enrichment/: ai_enricher.py
certificate-service/: README.md  _test_db.py  _test_live.py  calculator.py  database.py  main.py  models.py  pyproject.toml  renderer.py  requirements.txt  test.py
docs/: inter-service.md
grievance-service/: README.md  package.json  pnpm-lock.yaml
ml-service/: README.md  main.py  models.py  pyproject.toml  requirements.txt  run_test.py  test_payload.json
ml-service/clustering/: clusterer.py  vectorizer.py
prisma/: schema.prisma  seed.ts
roadmaps/: community.md  core.md  services.md  ux.md
seed/: anomaly_trigger_shifts_test_worker.csv  community.ts  index.ts  ss.ts
src/: proxy.ts  routes.ts
(+218 files in other folders)
