[project]
name = "ml-service"
version = "0.1.0"
description = "Machine Learning service for clustering and analysis"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.0",
    "scikit-learn==1.5.0",
    "numpy==1.26.4",
    "scipy==1.13.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
]
